--- a/marketing-research/описание.md
+++ b/marketing-research/описание.md
@@ -1,8 +1,19 @@
 # Анализ маркетинговых данных
-
+## Описание
 1. В соответствии с заданием должен быть проведен анализ макркетинговых данных по приложению.
 2. В качестве проблемы обозначена низкая эффективность рекламы при значительных вложениях.
 3. Для анализа предоставлена следующая информация:
    * Лог сервера с информацией о посещениях сайта
    * Информация о заказах
    * Иформация о затратах на маркетинг
+
+В прокте выполнен анализ LTV, ROI, удержания и конверсии пользователей, пришедшим по разным рекламным каналам.
+Выполнена оценка окупаемости рекламы с разбивкой по устройствам, странам и рекламным каналам.
+
+## Навыки и инструменты
+1. Pandas
+2. Matplotlib
+3. Когортный анализ
+4. Юнит-экономика
+5. Продуктовые метрики
+6. Seaborn
